# inf319

./: CMakeLists.txt  README.md
Engine/: Makefile
Engine/Include/Engine/: Camera.h  Context.h  Entity.h  EventHandler.h  Geometry.h  IndexedMesh.h  Input.h  KeyEventHandler.h  LightSource.h  Material.h  Math.h  Mesh.h  MeshGeneration.h  MouseEventHandler.h  Node.h  Renderer.h  Texture.h  TextureAtlas.h  Vertex.h  Window.h  WindowEventHandler.h
Engine/Include/Render/: Camera.h  Entity.h  IndexedMesh.h  MeshGeneration.h  RenderObject.h  Renderer.h
Engine/Include/Scene/: Camera.h  Node.h
Engine/Source/: Input.cpp  Math.cpp  MeshGeneration.cpp  Node.cpp  Texture.cpp  TextureAtlas.cpp  Vertex.cpp
Middleware/Include/glad/: glad.h
Middleware/Source/: glad.c
Sandbox/: Makefile
Sandbox/Include/bp/: buffer.h  message.h  program.h  shader.h
Sandbox/Source/: GLContext.cpp  GLContext.h  GLPerMesh.cpp  GLPerMesh.h  GLRenderer.cpp  GLRenderer.h  GLWindow.cpp  GLWindow.h  Main.cpp  ParticleSystem.cpp  ParticleSystem.h  buffer.cpp  message.cpp  program.cpp  shader.cpp
Scene/Include/Render/: Mesh.h  Vertex.h
Scene/Include/Scene/: Camera.h  ElementGeometry.h  Geometry.h  GeometryGeneration.h  Math.h  Node.h  Vertex.h
Scene/Include/Util/: Math.h
Scene/Source/: Camera.cpp  GeometryGeneration.cpp  Math.cpp  MeshGeneration.cpp  Node.cpp  Vertex.cpp
VulkanSandbox/: Makefile
VulkanSandbox/Shaders/: Particle.comp  Particle.frag  Particle.geom  Particle.vert  Simple.frag  Simple.vert  Textured.frag  Textured.vert
VulkanSandbox/Source/: Context.h  Main.cpp  ParticleSystem.cpp  ParticleSystem.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanBuffers.cpp  VulkanBuffers.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanIncludes.h  VulkanPerMesh.cpp  VulkanPerMesh.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtil.cpp  VulkanUtil.h  VulkanWindow.cpp  VulkanWindow.h
